--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Button Desire Field</title>
+    
+    <!-- Open Graph-->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://button.freewaterhouse.com/" />
+    <meta property="og:title" content="&lt;button&gt; &lt;desire&gt; &lt;forcefield&gt;" />
+    <meta property="og:description" content="button based social media" />
+    <meta property="og:image" content="https://button.freewaterhouse.com/images/bdf_thumbnail.png" />
+
+    <!-- Twitter (only needs card type, falls back to OG for other info) -->
+    <meta name="twitter:card" content="summary_large_image" />
+
+    <!-- Standard Meta Tags -->
+    <meta name="description" content="button based social media" />
   </head>
   <body>
     <div id="root"></div>
